--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/rayonprotocol/rayonprotocol-contract-common#readme",
   "dependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "openzeppelin-solidity": "^1.12.0"
   }
 }
